Beferoe Code Restrututing to a single python file

--- a/config.yaml
+++ b/config.yaml
@@ -1,5 +1,6 @@
-dir: jdfjdfj
-interval: '12345'
-password: fjfj
-server: jjjdjkf
-user: fjjfj
+dir: ''
+interval: '10'
+password: IWe7Lrl6ssPl43z8ldtlvnWeYk0JhesJ
+server: eu-central-1.sftpcloud.io
+url: http://pendelcam.kip.uni-heidelberg.de/mjpg/video.mjpg
+user: 5b50b00094ac432ba29b1d17304a8a66
